# book_inventory

./: .gitignore  README.md  books.sql  pyproject.toml
src/book_inventory/: __init__.py  format.py
