[project]
name = "book-inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "yinchichan@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "requests>=2.33.1",
    "rich-click>=1.9.7",
]

[project.scripts]
books = "book_inventory:books"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
